@@ -4,7 +4,7 @@
 #
 # Create an installation image.
 #
-#   (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
+#   (C) Copyright 2016-2024 Fred Gleason <fredg@paravelsystems.com>
 #
 #   This program is free software; you can redistribute it and/or modify
 #   it under the terms of the GNU General Public License version 2 as
@@ -87,7 +87,7 @@ if($ARGV[0] eq "--list-roots") {
     my @filesystems=&GetRootFilesystems();
     for(my $i=0;$i<@filesystems;$i++) {
 	if(substr($filesystems[$i],-7) eq "-rootfs") {
-	    print $filesystems[$i];
+	    print $filesystems[$i]."\n";
 	}
     }
     exit 0;
